--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@ body {
 .header {
     background-color: #222222;
     height: 288px;
-    padding: 16px 0 0 0;
+    padding: 16px 0 16px 0;
 }
 
 .header-emoji {
