--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@ body {
 .header {
     background-color: #222222;
     height: 288px;
-    padding: 16px 0 16px 0;
+    padding: 16px 0 70px 0;
 }
 
 .header-emoji {
@@ -38,8 +38,8 @@ body {
     margin: 4px auto;
     text-align: center;
     max-width: 384px;
-    display: block;
-    margin-block-start: 1em;
+    #display: block;
+    #margin-block-start: 1em;
 }
 
 .wrapper {
