--- a/assets/style.css
+++ b/assets/style.css
@@ -39,7 +39,7 @@ body {
     text-align: center;
     max-width: 384px;
     display: block;
-    #margin-block-start: 1em;
+    margin-block-start: 1em;
 }
 
 .wrapper {
