--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@ body {
 
 .header {
     background-color: #222222;
-    height: 288px;
+    #height: 288px;
     padding: 16px 0 0 0;
 }
 
@@ -62,7 +62,8 @@ body {
     display: flex;
     justify-content: space-evenly;
     padding-top: 24px;
-    margin: -80px auto 0 auto;
+    #margin: -80px auto 0 auto;
+    margin: 0 auto 0 auto;
     background-color: #FFFFFF;
     box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
 }
@@ -85,4 +86,10 @@ body {
     width: 200px;
     font-weight: bold;
     color: #5D737E;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+
 }
